--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Final Project: Article Summarizer\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Cameron Landon\n",
+    "### GitHub Repo: https://github.com/CamLandon/Module07\n",
+    "### API: https://www.tdcj.texas.gov/death_row/dr_executed_offenders.html\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -186,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
