--- a/article-summarizer.ipynb
+++ b/article-summarizer.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Web Mining and Applied NLP (44-620)\n",
     "\n",
     "## Final Project: Article Summarizer\n",
     "\n",
-    "### Student Name: Cameron Landon\n",
+    "### Student Name: Cameron Landon TEST 8/11/23\n",
     "### GitHub Repo: https://github.com/CamLandon/Module07\n",
     "### API: https://www.tdcj.texas.gov/death_row/dr_executed_offenders.html\n",
     "\n",
@@ -188,9 +190,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
